Introduce professional logging with log4j2
Write logs to console as well as to file in home dir, rotated weekly